por favor funciona

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
 body {
-    background-color: purple;
+    background-color: pink;
+    lack;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
